# doodle-better

./: .gitignore  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt  run.py  setup.bat  setup.ps1  start.bat  start_server_only.bat
alembic/: env.py
alembic/versions/: 001_add_created_by_user_id_to_polls.py  002_add_token_to_users.py
backend/: __init__.py  config.py  database.py  main.py  models.py  poll_service.py  routes.py  schemas.py  seed.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AdminVoteModal.tsx  ErrorBoundary.tsx  Layout.tsx  PollCard.tsx  PollFormModal.tsx  UserBar.tsx  VoteListModal.tsx
frontend/src/context/: ThemeContext.tsx  UserContext.tsx
frontend/src/pages/: AdminPage.tsx  HistoryPage.tsx  HomePage.tsx  MyPollsPage.tsx
